#1 fixed mobile menu z-index

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -9,7 +9,7 @@
   top: 0;
   left: 0;
   width: 100%; // Full width
-  z-index: 1000;
+  z-index: 10000;
   // background-color: rgba(var(--bg), 1); // Use RGB variable for background
   // border-bottom: 1px solid rgb(var(--light-gray)); // Use RGB variable for light gray
   padding: 1.5rem 2rem;
